Connect CS of MEMS to mcu.

--- a/kicad/IMU.cmp
+++ b/kicad/IMU.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2015-04-25 BZR 5623)-product   date = Lördag 06 Juni 2015 16:42:54
+Cmp-Mod V01 Created by Cvpcb (2015-04-25 BZR 5623)-product   date = Onsdag 10 Juni 2015 21:03:51
 
 BeginCmp
 TimeStamp = /5547C4E8/554904EA;
